# TaskPool

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: TaskPool.h
src/: CMakeLists.txt  TaskPool.cpp
tests/: CMakeLists.txt  test_TaskPool.cpp
